@@ -5,6 +5,9 @@ import com.goggles.mentoring_service.application.command.CategoryCommand;
 import com.goggles.mentoring_service.application.result.CategoryResult;
 import com.goggles.mentoring_service.domain._common.UserType;
 import com.goggles.mentoring_service.domain.category.MentoringCategory;
+import com.goggles.mentoring_service.domain.category.MentoringCategoryId;
+import com.goggles.mentoring_service.domain.category.exception.CategoryNotFoundException;
+import com.goggles.mentoring_service.domain.category.exception.CategoryValidationException;
 import com.goggles.mentoring_service.domain.category.repository.MentoringCategoryRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,7 +22,10 @@ import static com.goggles.mentoring_service.domain.category.CategoryFixture.crea
 import static com.goggles.mentoring_service.domain.category.CategoryFixture.createInactive;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 
 @ExtendWith(MockitoExtension.class)
 class CategoryServiceTest {
@@ -32,30 +38,30 @@ class CategoryServiceTest {
 
 	// ── getActiveCategories ───────────────────────────────────────────────────
 
-  @Test
-  void getActiveCategories_success() {
-    MentoringCategory c1 = createActive(0);
-    MentoringCategory c2 = createActive(1);
-    given(categoryRepository.findByActiveIsTrue()).willReturn(List.of(c1, c2));
+	@Test
+	void getActive_success() {
+		MentoringCategory c1 = createActive(0);
+		MentoringCategory c2 = createActive(1);
+		given(categoryRepository.findByActiveIsTrue()).willReturn(List.of(c1, c2));
 
 		List<CategoryResult.Info> result = categoryService.getActiveCategories();
 
 		assertThat(result).hasSize(2);
-		assertThat(result.get(0)
+		assertThat(result.getFirst()
 				.getName()).isEqualTo(c1.getName());
-		assertThat(result.get(0)
+		assertThat(result.getFirst()
 				.getCode()).isEqualTo(c1.getCode());
-		assertThat(result.get(0)
+		assertThat(result.getFirst()
 				.getSortOrder()).isEqualTo(0);
-		assertThat(result.get(0)
+		assertThat(result.getFirst()
 				.isActive()).isTrue();
 		assertThat(result.get(1)
 				.getName()).isEqualTo(c2.getName());
 	}
 
-  @Test
-  void getActiveCategories_empty() {
-    given(categoryRepository.findByActiveIsTrue()).willReturn(List.of());
+	@Test
+	void getActive_returnsEmpty() {
+		given(categoryRepository.findByActiveIsTrue()).willReturn(List.of());
 
 		List<CategoryResult.Info> result = categoryService.getActiveCategories();
 
@@ -64,11 +70,12 @@ class CategoryServiceTest {
 
 	// ── getAllCategories ──────────────────────────────────────────────────────
 
-  @Test
-  void getAllCategories_success() {
-    MentoringCategory active = createActive(0);
-    MentoringCategory inactive = createInactive();
-    given(categoryRepository.findAllByOrderBySortOrderAsc()).willReturn(List.of(active, inactive));
+	@Test
+	void getAll_success() {
+		MentoringCategory active = createActive(0);
+		MentoringCategory inactive = createInactive();
+		given(categoryRepository.findAllByOrderBySortOrderAsc()).willReturn(
+				List.of(active, inactive));
 
 		List<CategoryResult.Info> result = categoryService.getAllCategories(
 				new CategoryCommand.GetList(UUID.randomUUID(), UserType.MASTER));
@@ -84,12 +91,208 @@ class CategoryServiceTest {
 				.getSortOrder()).isNull();
 	}
 
-  @Test
-  void getAllCategories_forbidden_if_not_master() {
-    assertThatThrownBy(
-            () ->
-                categoryService.getAllCategories(
-                    new CategoryCommand.GetList(UUID.randomUUID(), UserType.INSTRUCTOR)))
-        .isInstanceOf(ForbiddenException.class);
-  }
+	@Test
+	void getAll_forbidden_if_not_master() {
+		assertThatThrownBy(() -> categoryService.getAllCategories(
+				new CategoryCommand.GetList(UUID.randomUUID(), UserType.INSTRUCTOR))).isInstanceOf(
+				ForbiddenException.class);
+	}
+
+	// ── createCategory ────────────────────────────────────────────────────────
+
+	@Test
+	void create_success() {
+		CategoryCommand.Create command =
+				new CategoryCommand.Create("Java", "JAVA", 0, UUID.randomUUID(), UserType.MASTER);
+
+		UUID result = categoryService.createCategory(command);
+
+		verify(categoryRepository).save(any(MentoringCategory.class));
+		assertThat(result).isNotNull();
+	}
+
+	@Test
+	void create_forbidden_if_not_master() {
+		CategoryCommand.Create command =
+				new CategoryCommand.Create("Java", "JAVA", 0, UUID.randomUUID(),
+						UserType.INSTRUCTOR);
+
+		assertThatThrownBy(() -> categoryService.createCategory(command)).isInstanceOf(
+				ForbiddenException.class);
+		verifyNoInteractions(categoryRepository);
+	}
+
+	// ── updateActiveCategories ────────────────────────────────────────────────
+
+	@Test
+	void updateActive_success() {
+		UUID adminId = UUID.randomUUID();
+		MentoringCategory c0 = createActive(0);
+		MentoringCategory c1 = createActive(1);
+		MentoringCategory c2 = createInactive();
+		given(categoryRepository.findAllByOrderBySortOrderAsc()).willReturn(List.of(c0, c1, c2));
+
+		// 순서를 [c2, c0]으로 변경, c1은 제외(비활성화)
+		categoryService.updateActiveCategories(
+				new CategoryCommand.UpdateActive(adminId, UserType.MASTER,
+						List.of(c2.getMentoringCategoryId(), c0.getMentoringCategoryId())));
+
+		assertThat(c2.isActive()).isTrue();
+		assertThat(c2.getSortOrder()).isEqualTo(0);
+		assertThat(c0.isActive()).isTrue();
+		assertThat(c0.getSortOrder()).isEqualTo(1);
+		assertThat(c1.isActive()).isFalse();
+		assertThat(c1.getSortOrder()).isNull();
+	}
+
+	@Test
+	void updateActive_empty_list() {
+		UUID adminId = UUID.randomUUID();
+		MentoringCategory c0 = createActive(0);
+		MentoringCategory c1 = createActive(1);
+		given(categoryRepository.findAllByOrderBySortOrderAsc()).willReturn(List.of(c0, c1));
+
+		categoryService.updateActiveCategories(
+				new CategoryCommand.UpdateActive(adminId, UserType.MASTER, List.of()));
+
+		assertThat(c0.isActive()).isFalse();
+		assertThat(c1.isActive()).isFalse();
+	}
+
+	@Test
+	void updateActive_not_found() {
+		given(categoryRepository.findAllByOrderBySortOrderAsc()).willReturn(List.of());
+
+		assertThatThrownBy(() -> categoryService.updateActiveCategories(
+				new CategoryCommand.UpdateActive(UUID.randomUUID(), UserType.MASTER,
+						List.of(new MentoringCategoryId(UUID.randomUUID()))))).isInstanceOf(
+				CategoryNotFoundException.class);
+	}
+
+	@Test
+	void updateActive_forbidden_if_not_master() {
+		assertThatThrownBy(() -> categoryService.updateActiveCategories(
+				new CategoryCommand.UpdateActive(UUID.randomUUID(), UserType.INSTRUCTOR,
+						List.of()))).isInstanceOf(ForbiddenException.class);
+		verifyNoInteractions(categoryRepository);
+	}
+
+	// ── updateCategory ────────────────────────────────────────────────────────
+
+	@Test
+	void update_success() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+		given(categoryRepository.existsByName("NewName")).willReturn(false);
+		given(categoryRepository.existsByCode("NEW")).willReturn(false);
+
+		categoryService.updateCategory(
+				new CategoryCommand.Update(id, "NewName", "NEW", UUID.randomUUID(),
+						UserType.MASTER));
+
+		assertThat(category.getName()).isEqualTo("NewName");
+		assertThat(category.getCode()).isEqualTo("NEW");
+	}
+
+	@Test
+	void update_nameConflict() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+		given(categoryRepository.existsByName("DupName")).willReturn(true);
+
+		assertThatThrownBy(() -> categoryService.updateCategory(
+				new CategoryCommand.Update(id, "DupName", category.getCode(), UUID.randomUUID(),
+						UserType.MASTER))).isInstanceOf(CategoryValidationException.class)
+				.hasMessageContaining("이름");
+	}
+
+	@Test
+	void update_codeConflict() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+		given(categoryRepository.existsByCode("DUPCODE")).willReturn(true);
+
+		assertThatThrownBy(() -> categoryService.updateCategory(
+				new CategoryCommand.Update(id, category.getName(), "DUPCODE", UUID.randomUUID(),
+						UserType.MASTER))).isInstanceOf(CategoryValidationException.class)
+				.hasMessageContaining("코드");
+	}
+
+	@Test
+	void update_null_name() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+		given(categoryRepository.existsByCode("NEW")).willReturn(false);
+
+		categoryService.updateCategory(
+				new CategoryCommand.Update(id, null, "NEW", UUID.randomUUID(), UserType.MASTER));
+
+		assertThat(category.getName()).isNotNull();
+		assertThat(category.getCode()).isEqualTo("NEW");
+	}
+
+	@Test
+	void update_null_code() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+		given(categoryRepository.existsByName("NewName")).willReturn(false);
+
+		categoryService.updateCategory(
+				new CategoryCommand.Update(id, "NewName", null, UUID.randomUUID(),
+						UserType.MASTER));
+
+		assertThat(category.getName()).isEqualTo("NewName");
+		assertThat(category.getCode()).isNotNull();
+	}
+
+	@Test
+	void update_notFound() {
+		MentoringCategoryId id = new MentoringCategoryId(UUID.randomUUID());
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.empty());
+
+		assertThatThrownBy(() -> categoryService.updateCategory(
+				new CategoryCommand.Update(id, "Name", "CODE", UUID.randomUUID(),
+						UserType.MASTER))).isInstanceOf(CategoryNotFoundException.class);
+	}
+
+	// ── deleteCategory ────────────────────────────────────────────────────────
+
+	@Test
+	void delete_success() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+
+		categoryService.deleteCategory(
+				new CategoryCommand.Delete(UUID.randomUUID(), UserType.MASTER, id));
+
+		assertThat(category.isActive()).isFalse();
+		assertThat(category.getSortOrder()).isNull();
+	}
+
+	@Test
+	void delete_notFound() {
+		MentoringCategoryId id = new MentoringCategoryId(UUID.randomUUID());
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.empty());
+
+		assertThatThrownBy(() -> categoryService.deleteCategory(
+				new CategoryCommand.Delete(UUID.randomUUID(), UserType.MASTER, id))).isInstanceOf(
+				CategoryNotFoundException.class);
+	}
+
+	@Test
+	void delete_forbidden_if_not_master() {
+		MentoringCategory category = createActive(0);
+		MentoringCategoryId id = category.getMentoringCategoryId();
+		given(categoryRepository.findById(id)).willReturn(java.util.Optional.of(category));
+
+		assertThatThrownBy(() -> categoryService.deleteCategory(
+				new CategoryCommand.Delete(UUID.randomUUID(), UserType.INSTRUCTOR,
+						id))).isInstanceOf(ForbiddenException.class);
+	}
 }
